--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "url": "https://nicnacnic.com",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^13.1.0",
+    "@discordjs/builders": "^0.7.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "discord.js": "^13.2.0",
     "fs": "^0.0.1-security",
     "node-fetch": "^2.6.1"
   }
